fix: hero backgrounds overflow on mobile

--- a/src/components/HeroBackgrounds.scss
+++ b/src/components/HeroBackgrounds.scss
@@ -7,7 +7,8 @@
 		opacity: 0.25;
 		position: absolute;
 		top: 0;
-		width: 100%;
+    width: 100%;
+    overflow: hidden;
 
     body.preload & {
       opacity: 0;
